Fri Jul 25 01:05:22 2003  Tim Janik  <timj@gtk.org>

	* bsemididevice-oss.c: push data into a midi decoder.

	* bsemididevice.c: provide default midi decoder (not midi receiver)
	for midi devices.

	* bsemididecoder.[hc]: new files. moved midi event decoding from
	bsemidireceiver.[hc] to here. uses bse_midi_receiver_farm_process_events()
	and bse_midi_receiver_farm_distribute_event() to have the events handled
	by all interested midi receivers.

	* bsemidievent.[hc]: added functions to copy and allocate midi events.

	* bsemidireceiver.[hc]: removed midi event decoding functionality.
	added midi-receiver-farm functions. a global midi event input queue.

	* bseproject.c: add project default decoder to midi receiver farm.

	* bseserver.c: removed default server midi receiver.

Thu Jul 24 01:28:33 2003  Tim Janik  <timj@gtk.org>

	* bsemidievent.[hc]: remove MIDI_MAX_CHANNEL assertions, up this to 99.

	* bsemidireceiver.[hc]: remove MIDI_MAX_CHANNEL assertions.
	add voice module ref counting.
	(bse_midi_receiver_voices_pending): check poending voices for a specific
	midi-channel.

	* bsemidivoice.c: don't export private functions.

	* bseproject.[hc]: provide a single midi-receiver for the whole project.

	* bsetrack.[hc]: don't provide own midi receiver, use the one from our
	song instead. added midi-channel property per track, per default, an
	internal midi-channel > MIDI_MAX_CHANNEL is used.

	* bsesong.[hcp]*: fetch midi-receiver from project once parent changes.
	provide tracks with midi receiver when creating voices. honour
	midi-channels of tracks.

	* bsessequencer.c: operate on the song's midi receiver, honour
	midi-channels of tracks.

Fri Jul 18 07:09:01 2003  Tim Janik  <timj@gtk.org>

	* gsldatahandle.c (gsl_data_handle_override): fix locking.

Fri Jul 18 06:41:08 2003  Tim Janik  <timj@gtk.org>

	* gslloader-gslwave.c: override osc_freq of external data handles.

	* gsldatahandle.[hc]:
	(gsl_data_handle_override): new function to allow overriding of